[package]
name = "storage"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
log4rs = "*"
clap = { git = "https://github.com/clap-rs/clap/" }
git-version = "*"
tonic = "0.2"
tokio = { version = "0.2", features = ["macros"] }
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
tikv-client = { git = "https://github.com/tikv/client-rust.git" }

# workround from https://github.com/tikv/client-rust/issues/142
[patch.crates-io]
raft-proto = { git = "https://github.com/tikv/raft-rs", rev = "e624c1d48460940a40d8aa69b5329460d9af87dd" }
