[package]
name = "storage"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "*"
log4rs = { version = "*", features = ["gzip"] }
clap = "3.0.0-beta.2"
git-version = "*"
tonic = "*"
tokio = { version = "*", features = ["full"] }
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto" }
tikv-client = { git = "https://github.com/tikv/client-rust.git" }
