[package]
name = "storage"
version = "4.0.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.14"
log4rs = { version = "1.0.0", features = ["gzip"] }
clap = "3.0.0-beta.2"
git-version = "0.3.4"
tonic = "0.4.1"
tokio = { version = "1.4.0", features = ["full"] }
cita_cloud_proto = { git = "https://github.com/cita-cloud/cita_cloud_proto", branch = "v4.0.0" }
tikv-client = { git = "https://github.com/tikv/client-rust.git" }
hex = "0.4.3"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1

